Score and CV discussion added

--- a/mechanics_starting_kit.ipynb
+++ b/mechanics_starting_kit.ipynb
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The indices on the horizontal axis represent time steps with equal intervals, can be considered as the unit of time. The values of phi for these times are listed. The \"future\" column represents the value of phi at 50 steps ahead. This is what we will try to predict in the regression problem. The \"system\" column represents one of the five mechanical systems (set of formulas) that was used to generate the time series. This will be the classification target. Each system comes with a bunch of \"hyperparameters\" which we draw randomly from a distribution. We will use different distributions which are indexed in the \"distribution\" column. This variable will be available both at training and test time, but it may have values in the test set not present in the training set. So this is not a target but not really a feature either, more like a \"hint\"."
+    "The indices on the horizontal axis represent time steps with equal intervals, can be considered as the unit of time. The values of phi for these times are listed. The \"future\" column represents the value of phi at 50 steps ahead. This is what we will try to predict in the regression problem. The \"system\" column represents one of the five mechanical systems (set of formulas) that was used to generate the time series. This will be the classification target. Each system comes with a bunch of \"hyperparameters\" which we draw randomly from a distribution. We will use different distributions which are indexed in the \"distribution\" column. This variable will be available both at training and test time, but it may have values in the test set not present in the training set. So this is not a target but not really a feature either, more like a \"hint\" (see cross-validation below)."
    ]
   },
   {
@@ -1207,7 +1207,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although there are two scores involved, we want to set the regression as the main score and treat the classification problem as a side product of the optimization for regression. We want, however, the participants to at least submit a non-trivial solution for classification therefore we assign a small but non-zero proportion for the combined score. For the regression, RMS-error is used, which is wrapped around pi and -pi."
+    "Although there are two scores involved, we want to set the regression as the main score and treat the classification problem as a side product of the optimization for regression. We want, however, the participants to at least submit a non-trivial solution for classification therefore we assign a small but non-zero proportion for the combined score. The classification score is the fraction of false identifications (printed as \"err\"), and has a value between 0 and 1. A random assignment is expected to have an error of 0.80.\n",
+    "For the regression, RMS-error is used (printed as \"rmse\"), which is wrapped around [$\\pi$] and [-$\\pi$]. It's maximum value is [$\\pi$] and a random assignment is expected to have an error around 1.8.\n",
+    "The final error (being lower the better) is 0.1 * err + 0.9 * rmse, printed as \"combined\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each row in the data sample is generated with random values of parameters that go into the formula. As these parameters cannot cover the infinite phase space, they come from certain distributions which may be different for training and testing datasets. To test the robustness of the learning approach, one can already test the dependency of parameter values, by using different input distributions in traning and validation.\n",
+    "In order to do that, we have provided a \"distribution\" variable in the dataset, by selection of which one can have an handle of sub-datasets with different parameter distributions.\n",
+    "The the get_cv function in problem.py implements this already, hence the 3 CV folds in the starting kit reflect the above.\n",
+    "The \"distribution\" variable appears in the data X, however make sure you do not train your models with this variable, as the values of this variable in the test sample will be different."
    ]
   },
   {
