notebook and readme updated

--- a/mechanics_starting_kit.ipynb
+++ b/mechanics_starting_kit.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](figures/workflow.png)"
+    "<img src=\"figures/workflow.png\" width=\"80%\"/>"
    ]
   },
   {
